test/libsolidity/syntaxTests/errors/selector.sol
error E();

contract C {
    bytes4 t = E.selector;
}
// ----
